使用 Colaboratory 建立

--- a/image2ascii.ipynb
+++ b/image2ascii.ipynb
@@ -20,7 +20,10 @@
         "# 圖片轉ascii字元圖\n",
         "所需套件  \n",
         "* cv2 : 影像處理\n",
-        "* matplolib : 顯示圖片用"
+        "* matplolib : 顯示圖片用\n",
+        "\n",
+        "# 簡報\n",
+        "https://docs.google.com/presentation/d/1bTpXufiKXWmjrnXSMiuTEy6eUsdD3oBE/edit?usp=sharing&ouid=108723750172387031938&rtpof=true&sd=true"
       ]
     },
     {
