使用 Colaboratory 建立

--- a/image2ascii.ipynb
+++ b/image2ascii.ipynb
@@ -11,6 +11,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!mkdir ./image\n",
+        "!mkdir ./output"
+      ],
+      "metadata": {
+        "id": "8ftACung5WSJ"
+      },
+      "id": "8ftACung5WSJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "c375a488-3f5a-4e8b-8057-7cbe05b89c7d",
       "metadata": {
@@ -23,7 +36,10 @@
         "* matplolib : 顯示圖片用\n",
         "\n",
         "# 簡報\n",
-        "https://docs.google.com/presentation/d/1bTpXufiKXWmjrnXSMiuTEy6eUsdD3oBE/edit?usp=sharing&ouid=108723750172387031938&rtpof=true&sd=true"
+        "https://docs.google.com/presentation/d/1bTpXufiKXWmjrnXSMiuTEy6eUsdD3oBE/edit?usp=sharing&ouid=108723750172387031938&rtpof=true&sd=true\n",
+        "\n",
+        "# 圖檔\n",
+        "https://drive.google.com/drive/folders/1EdB5CyLjJCXa-JFCTS_Xtq8JtDvr29hj?usp=sharing"
       ]
     },
     {
